Disable new `Style/DisableCopsWithinSourceCodeDirective` cop
This cop doesn't really make sense to me. If I'm disabling a cop via a
code comment, it's because I think the cop should be disabled there. So
don't complain when I do this!

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -103,6 +103,8 @@ Style/ConstantVisibility:
   Enabled: false
 Style/Copyright:
   Enabled: false
+Style/DisableCopsWithinSourceCodeDirective:
+  Enabled: false
 Style/Documentation:
   Enabled: false
 Style/DocumentationMethod:
