--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^3.5.2",
     "dompurify": "^2.0.9",
+    "easytimer.js": "^4.1.1",
     "element-ui": "^2.13.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
