--- a/db/migrate/.rubocop.yml
+++ b/db/migrate/.rubocop.yml
@@ -6,6 +6,7 @@ Style/MethodCallWithArgsParentheses:
     - add_column
     - add_index
     - change
+    - change_column
     - change_column_null
     - create_table
     - datetime
