Make `bin/rspec` command `spring`-aware
`bundle exec spring binstub rspec`

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -99,6 +99,8 @@ Style/BlockDelimiters:
   Enabled: false
 Style/ClassAndModuleChildren:
   EnforcedStyle: compact
+Style/CollectionMethods:
+  Enabled: false
 Style/ConstantVisibility:
   Enabled: false
 Style/Copyright:
