Add spaces inside all Ruby hash literals
`bin/rubocop `git ls-tree -r HEAD --name-only` --force-exclusion --only
Layout/SpaceInsideHashLiteralBraces --auto-correct`

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -47,7 +47,7 @@ Layout/SpaceBeforeBlockBraces:
 Layout/SpaceBeforeSemicolon:
   Enabled: false
 Layout/SpaceInsideHashLiteralBraces:
-  EnforcedStyle: no_space
+  EnforcedStyle: space
 Lint/RedundantSplatExpansion:
   Enabled: false
 Metrics/AbcSize:
