Allow scheduling reminders for logs

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -11,5 +11,7 @@ production:
 :schedule:
   InvalidRecordsChecker:
     cron: '55 16 * * *' # daily at 4:55pm PT
+  SendLogReminderEmails:
+    cron: '* * * * *' # every minute
   TruncateTables:
     cron: '33 * * * *' # hourly at 33 minutes after
