Disable `Lint/MixedRegexpCaptureTypes` rubocop cop
I think (?) that this cop was added recently. It raises errors:

> 2 errors occurred: An error occurred while
> Lint/MixedRegexpCaptureTypes cop was inspecting
> /home/travis/build/davidrunger/david_runger/spec/controllers/api/logs_controller_spec.rb:58:41.
> An error occurred while Lint/MixedRegexpCaptureTypes cop was
> inspecting
> /home/travis/build/davidrunger/david_runger/spec/controllers/api/logs_controller_spec.rb:59:41.

-- https://travis-ci.org/github/davidrunger/david_runger/builds/693660809

Therefore, disable it to avoid these errors. It would be nice to have
this cop enabled (rationale mentioned here:
https://github.com/rubocop-hq/rubocop/issues/ 7746 : "we cannot
reference numbered captures if they are mixed") but it's not worth it
while it raises these errors.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -48,6 +48,9 @@ Layout/SpaceBeforeSemicolon:
   Enabled: false
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: space
+Lint/MixedRegexpCaptureTypes:
+  # disable because it raises 2 errors inspecting spec/controllers/api/logs_controller_spec.rb
+  Enabled: false
 Lint/RedundantSplatExpansion:
   Enabled: false
 Metrics/AbcSize:
