--- a/spec/.rubocop.yml
+++ b/spec/.rubocop.yml
@@ -4,6 +4,8 @@ Lint/AmbiguousBlockAssociation:
   Enabled: false
 Performance/ChainArrayAllocation:
   Enabled: false
+RSpec/ExampleLength:
+  Enabled: false
 RSpec/MultipleExpectations:
   Enabled: false
 Style/IpAddresses:
