Use #include? rather than in? in sidekiq.yml
Evidently (based on H10 errors in production when #2744 / 1b86711
deployed), the `Object#in?` monkeypatch provided by ActiveSupport hasn't
(necessarily?) yet been applied when Sidekiq needs it to have been while
parsing the config file.

It's not clear to me why this error didn't occur when I booted Sidekiq
locally but I guess that it has to do with differences in the boot
process (e.g. `spring`, maybe?).

--- a/app.json
+++ b/app.json
@@ -1,4 +1,10 @@
 {
+  "env": {
+    "S3_ACCESS_KEY_ID": { "description": "S3 ACCESS KEY ID", "value": "" },
+    "S3_SECRET_ACCESS_KEY": { "description": "S3 SECRET ACCESS KEY", "value": "" },
+    "S3_BUCKET": { "description": "S3 BUCKET", "value": "" },
+    "S3_REGION": { "description": "S3 REGION", "value": "" }
+  },
   "environments": {
     "review": {
       "addons": [
@@ -11,6 +17,12 @@
         { "url": "heroku/ruby" },
         { "url": "https://github.com/weibeld/heroku-buildpack-run" }
       ],
+      "env": {
+        "S3_ACCESS_KEY_ID": "FAKETEST123",
+        "S3_SECRET_ACCESS_KEY": "aBc123FakeTest",
+        "S3_BUCKET": "david-runger-uploads",
+        "S3_REGION": "us-east-1"
+      },
       "scripts": {
         "postdeploy": "bin/rake db:schema:load"
       }
