Expect subdomain mg.davidrunger.com for inbound emails
Also, add a `reply_to` email address and change encoding of log slug/id
in that email address.

Also, rename `LogReminderRepliesMailbox` to `LogEntriesMailbox` since
theoretically a user could create a log entry by composing an email
manually rather than replying to an email sent from davidrunger.com .

Also, add `action_mailbox_incineration` and `active_storage_purge`
Sidekiq queues to enumerated queues (so that we'll process jobs that
Action Mailbox adds to those queues).

fixes https://rollbar.com/davidjrunger/davidrunger/items/240/

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -6,8 +6,10 @@ production:
   - ['essential', 12] # ideally we'd run this queue on a separate process, but that'd cost money :(
   - ['default', 3]
   - ['rollbar', 3]
-  - ['mailers', 1]
+  - ['action_mailbox_incineration', 1]
   - ['action_mailbox_routing', 1]
+  - ['active_storage_purge', 1]
+  - ['mailers', 1]
 
 :schedule:
   InvalidRecordsChecker:
