--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -24,6 +24,8 @@ common: &default_settings
   # Logging level for log/newrelic_agent.log
   log_level: info
 
+  distributed_tracing:
+    enabled: true
 
 # Environment-specific settings are in this section.
 # RAILS_ENV or RACK_ENV (as appropriate) is used to determine the environment.
