Add basic feature test for workout app

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -166,6 +166,8 @@ Style/RescueStandardError:
   Enabled: false
 Style/ReturnNil:
   Enabled: false
+Style/RegexpLiteral:
+  Enabled: false
 Style/Semicolon:
   Enabled: false
 Style/SignalException:
