Speficy `os` and `dist` options in `.travis.yml`; remove `sudo`
Also: change `redis-server` to `redis`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: ruby
-sudo: false
+os: linux
+dist: bionic
 cache:
   bundler: true
   directories:
@@ -9,7 +10,7 @@ rvm:
 services:
   - memcached
   - postgresql
-  - redis-server
+  - redis
 addons:
   chrome: stable
   postgresql: "9.6"
