Split test orchestration code into separate files
This is just a refactor; it was a little unmanageable to navigate around
an ~400 line file! Hopefully navigating this code will be easier with
this new organization into smaller files.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   - . $HOME/.nvm/nvm.sh
   - nvm install 12.13.1
 script:
-  - bin/pallets --verbose -r ./bin/orchestrate-tests.rb
+  - bin/pallets --verbose -r ./bin/run-tests.rb
 notifications:
   email:
     on_success: never
