--- a/config/database.yml
+++ b/config/database.yml
@@ -58,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: david_runger_test
+  database: david_runger_test<%= ENV['DB_SUFFIX'] %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
