--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -159,6 +159,8 @@ Style/MethodCalledOnDoEndBlock:
   Enabled: false
 Style/NumericPredicate:
   Enabled: false
+Style/ParenthesesAroundCondition:
+  Enabled: false
 Style/RescueModifier:
   Enabled: false
 Style/RescueStandardError:
