--- a/db/migrate/.rubocop.yml
+++ b/db/migrate/.rubocop.yml
@@ -7,6 +7,7 @@ Style/MethodCallWithArgsParentheses:
     - add_foreign_key
     - add_column
     - add_index
+    - add_reference
     - belongs_to
     - bigint
     - change
