--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -62,6 +62,8 @@ Naming/RescuedExceptionsVariableName:
   Enabled: false
 Performance/ChainArrayAllocation:
   Enabled: false
+Performance/RedundantBlockCall:
+  Enabled: false
 Rails:
   Enabled: true
 Rails/Output:
