--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -48,6 +48,8 @@ Layout/SpaceBeforeSemicolon:
   Enabled: false
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: space
+Lint/ConstantResolution:
+  Enabled: false
 Lint/RedundantSplatExpansion:
   Enabled: false
 Metrics/AbcSize:
