--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.10.0",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@babel/preset-env": "^7.10.3",
+    "@rails/actioncable": "^6.0.3-2",
     "@rails/webpacker": "^5.1.1",
     "autoprefixer": "^9.8.2",
     "axios": "^0.19.2",
