Check for invalid records at 8:23am PT (rather than 4:55pm PT)
I'd prefer to deal with invalid records earlier rather than later in the
day.

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -13,7 +13,7 @@ production:
 
 :schedule:
   InvalidRecordsChecker:
-    cron: '55 16 * * *' # daily at 4:55pm PT
+    cron: '23 8 * * *' # daily at 8:23am PT
   <% if %w[production test].include?(ENV['RAILS_ENV']) %>
   RunHeat:
     cron: '42 */4 * * *' # 42 minutes past every 4th hour
