--- a/config/storage.yml
+++ b/config/storage.yml
@@ -4,7 +4,7 @@ local:
 
 amazon:
   service: S3
-  access_key_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
-  secret_access_key: <%= ENV['S3_SECRET_ACCESS_KEY'] %>
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
   bucket: <%= ENV['S3_BUCKET'] %>
   region: <%= ENV['S3_REGION'] %>
