--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -15,7 +15,7 @@ production:
     cron: '23 8 * * *' # daily at 8:23am PT
   <% if %w[production test].include?(ENV['RAILS_ENV']) %>
   RunHeat:
-    cron: '42 */2 * * *' # 42 minutes past every 2 hours
+    cron: '42 * * * *' # hourly at 42 minutes past the hour
   SendLogReminderEmails:
     cron: '* * * * *' # every minute
   TruncateTables:
