--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "devDependencies": {
     "@percy/agent": "^0.28.4",
     "postcss": "^8.1.4",
+    "postcss-html": "^0.36.0",
     "postcss-safe-parser": "^5.0.2",
     "postcss-scss": "^3.0.4",
     "postcss-syntax": "^0.36.2",
