--- a/config/database.yml
+++ b/config/database.yml
@@ -59,6 +59,9 @@ development:
 test:
   <<: *default
   database: david_runger_test<%= ENV['DB_SUFFIX'] %>
+  host: <%= ENV['POSTGRES_HOST'] || 'localhost' %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['PGPASSWORD'] || '' %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
