--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -38,9 +38,10 @@ jobs:
           - 6379:6379 # Maps port 6379 on service container to the host
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-ruby@v1
+    - name: Setup Ruby 2.7.2
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.7.x
+        ruby-version: 2.7.2
     - uses: ruby/setup-ruby@v1
       with:
         bundler-cache: true
