--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -48,16 +48,13 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: 14.15.0
-    - name: Set yarn cache dir
-      id: yarn-cache
-      run: echo "::set-output name=dir::$(yarn cache dir)"
-    - name: Cache yarn dependencies
+    - name: Cache node_modules
       uses: actions/cache@v1
       with:
-        path: ${{ steps.yarn-cache.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        path: node_modules
+        key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
-          ${{ runner.os }}-yarn-
+          ${{ runner.os }}-node_modules-
     - name: Run tests & linters
       run: bin/pallets --verbose -r ./bin/run-tests.rb
       env:
