Fetch 100 commits for GitHub Actions
Without this, everything is fetched as a single commit, which was then
breaking our ability to determine which files have been changed since
`master` (which, in turn, we use to determine which tests/linters should
be run).

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -38,6 +38,8 @@ jobs:
           - 6379:6379 # Maps port 6379 on service container to the host
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 100 # this might cause issues if there are more than 100 commits in a PR (?)
     - name: Setup Ruby 2.7.2
       uses: ruby/setup-ruby@v1
       with:
