--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mini-css-extract-plugin": "^0.12.0",
     "node-pre-gyp": "^0.17.0",
     "node-sass": "^5.0.0",
+    "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "path-complete-extname": "^1.0.0",
     "postcss-loader": "^4.1.0",
