--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@babel/preset-env": "^7.12.11",
+    "@hotwired/turbo-rails": "^7.0.0-beta.3",
     "@rails/actioncable": "^6.1.0",
     "@rails/webpacker": "^5.2.1",
     "autoprefixer": "^10.1.0",
