--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,6 +4,7 @@
   "rules": {
     "at-rule-no-unknown": null,
     "no-descending-specificity": null,
-    "scss/at-rule-no-unknown": true
+    "scss/at-rule-no-unknown": true,
+    "selector-pseudo-class-no-unknown": null
   }
 }
