--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hotwired/turbo-rails": "^7.0.0-beta.4",
     "@rails/actioncable": "^6.1.1",
     "@rails/webpacker": "^5.2.1",
+    "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.3",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
@@ -34,7 +35,7 @@
     "css-loader": "^5.0.1",
     "dompurify": "^2.2.6",
     "easytimer.js": "^4.3.1",
-    "element-ui": "^2.15.0",
+    "element-plus": "^1.0.2-beta.28",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-import-resolver-webpack": "^0.13.0",
@@ -65,14 +66,11 @@
     "strftime": "^0.10.0",
     "style-loader": "^2.0.0",
     "toastify-js": "^1.9.3",
-    "vue": "^2.6.12",
-    "vue-chartjs": "^3.5.1",
-    "vue-drag-drop": "^1.1.4",
-    "vue-form": "^4.10.3",
-    "vue-loader": "^15.9.6",
-    "vue-router": "^3.4.9",
-    "vue-template-compiler": "^2.6.12",
-    "vuex": "^3.6.0",
+    "vue": "^3.0",
+    "vue-chartjs": "https://github.com/davidrunger/vue-chartjs.git#vue-3",
+    "vue-loader": "^16.1.2",
+    "vue-router": "^4.0",
+    "vuex": "^4.0.0-rc.2",
     "vuex-router-sync": "^5.0.0",
     "waypoints": "^4.0.1",
     "webpack": "^4.46.0",
