--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.2.3",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "babel-plugin-component": "^1.1.1",
     "babel-polyfill": "^6.23.0",
     "basscss": "^8.1.0",
     "basscss-background-colors": "^2.1.0",
