--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lodash": "^4.17.20",
     "marked": "^1.2.8",
     "mini-css-extract-plugin": "^0.12.0",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "node-pre-gyp": "^0.17.0",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
