--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "basscss-lighten": "^1.1.0",
     "caniuse-lite": "^1.0.30001183",
     "chart.js": "^2.9.4",
+    "chartkick": "^3.2.1",
     "clipboard": "^2.0.6",
     "compression-webpack-plugin": "^6.1.1",
     "css-loader": "^5.0.1",
