Run DataMonitors checks every 5 minutes but email only daily
This is implemented with assistance from the `redlock` (Redis lock) gem,
added in this commit.

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -13,9 +13,9 @@ production:
 :schedule:
   InvalidRecordsChecker:
     cron: '23 8 * * *' # daily at 8:23am PT
-  DataMonitors::Launcher:
-    cron: '16 2 * * *' # daily at 2:16am PT
   <% if %w[production test].include?(ENV['RAILS_ENV']) %>
+  DataMonitors::Launcher:
+    cron: '4-59/5 * * * *' # every 5 minutes (offset by 4 minutes)
   SendLogReminderEmails:
     cron: '* * * * *' # every minute
   TruncateTables:
