--- a/package.json
+++ b/package.json
@@ -84,15 +84,19 @@
   },
   "devDependencies": {
     "@percy/agent": "^0.28.6",
+    "@vitejs/plugin-vue": "^1.1.4",
     "postcss": "^8.2.5",
     "postcss-html": "^0.36.0",
     "postcss-safe-parser": "^5.0.2",
     "postcss-scss": "^3.0.4",
     "postcss-syntax": "^0.36.2",
+    "sass": "^1.32.7",
     "stylelint": "~13",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.19.0",
     "stylelint-webpack-plugin": "^2.1.1",
+    "vite": "^2.0.0-beta.65",
+    "vite-plugin-ruby": "^1.0.8",
     "webpack-dev-server": "^3.11.2",
     "webpack-node-externals": "^2.5.2",
     "webpack-sources": "^2.2"
