--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.12.13",
     "@hotwired/turbo-rails": "^7.0.0-beta.5",
     "@rails/actioncable": "^6.1.1",
+    "@rails/ujs": "^6.1.2-1",
     "@rails/webpacker": "^5.2.1",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.4",
