Revert "Stop running `heat`"
This reverts commit c0f9ac8bba912f0935db16d3fe843f3e6246d103.

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -16,6 +16,8 @@ production:
   <% if %w[production test].include?(ENV['RAILS_ENV']) %>
   DataMonitors::Launcher:
     cron: '4-59/5 * * * *' # every 5 minutes (offset by 4 minutes)
+  RunHeat:
+    cron: '42 * * * *' # hourly at 42 minutes past the hour
   SendLogReminderEmails:
     cron: '* * * * *' # every minute
   TruncateTables:
