--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -77,6 +77,7 @@ jobs:
         BUILD_TIME_LOG_AUTH_TOKEN: "${{secrets.BUILD_TIME_LOG_AUTH_TOKEN}}"
         BUILD_TIME_LOG_ID: "${{secrets.BUILD_TIME_LOG_ID}}"
         BUILD_TIME_LOG_URL: "${{secrets.BUILD_TIME_LOG_URL}}"
+        BUNDLE_GITHUB__COM: "${{secrets.BUNDLE_GITHUB__COM}}"
         PERCY_TOKEN: "${{secrets.PERCY_TOKEN}}"
         CODECOV_TOKEN: "${{secrets.CODECOV_TOKEN}}"
     - name: Save fixtures artifact
