--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "when-dom-ready": "^1.2.12"
   },
   "devDependencies": {
-    "@percy/agent": "^0.28.6",
+    "@percy/cli": "^1.0.0-beta.59",
     "@vitejs/plugin-vue": "^1.2.5",
     "postcss": "^8.3.5",
     "postcss-html": "^0.36.0",
